UI Updates & invisible user account bug fix

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1767,7 +1767,6 @@ textarea {
 
 .common-heading .tagline .heading-shadow-text {
 	font-size: 60px;
-	font-family: var(--shadows-font);
 	line-height: 1;
 	color: var(--secondary-color);
 	letter-spacing: -0.5px;
