--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -912,7 +912,7 @@
 
     /*======= Hero Area One =======*/
 	.hero-area-one .hero-text {
-		padding-top: 160px;
+		padding-top: 110px;
 		padding-bottom: 110px;
 	}
 
